--- a/Assessment1_Haset_Wendesen_Section4/asset/css/style.css
+++ b/Assessment1_Haset_Wendesen_Section4/asset/css/style.css
@@ -1,11 +1,11 @@
 :root{
-    --headerColor:rgb(201, 247, 201);
-    --navColor:rgb(165, 237, 165);
+    --headerColor: #d9eed9;
+    --navColor:#4CAF50 ;
     --primaryColor:rgba(241, 237, 237, 0.701);
     --articlColor:white;
     --textColor:black;
     --priceColor:rgb(47, 169, 47);
-    --foterBgColor:rgb(23, 96, 23);
+    --foterBgColor: #124314;
     --footerTxtColor:white;
     --lihoverColor:rgb(210, 209, 209);
 }
@@ -72,25 +72,25 @@ p{
     justify-content: space-evenly;
 }
 .product{
-    width: 200px;
+    width: 220px;
     height: 400px;
     margin: 10px;
     border: none;
-    border-radius: 15px;
+    border-radius: 10px;
     background-color: var(--articlColor);
     padding: 20px;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
 }
 .image-container{
     width: 170px;
-    height: 200px;
+    height: auto;
     border-radius: 10px;
     margin-bottom: 10px;
 
 }
 .image-wrapper{
     width: 170px;
-    height: 100px;
+    height: auto;
     border-radius: 10px;
     margin-bottom: 10px;
 }
@@ -112,4 +112,50 @@ footer{
     text-align: center;
     color: var(--footerTxtColor);
     padding: 50px;
+    
+}
+@media(max-width:1024px ){
+    main{
+       padding: 100px;
+    }
+    #section1,
+    #section2,
+    #section3{
+        display: block;
+        justify-content: space-evenly;
+    }
+    .product{
+        width: 500px;
+        margin-bottom: 50px;
+    }
+    .image-wrapper{
+        width: 300px;
+        margin-left: 50px;
+    }
+    .image-container{
+        width: 300px;
+        margin-left: 50px;
+    }
+}
+@media(max-width:640px ){
+    
+    #section1,
+    #section2,
+    #section3{
+        display: block;
+        justify-content: space-evenly;
+    }
+    .product{
+        width: 300px;
+        height: 380px;
+        padding-top: 50px;
+       
+    }
+    .image-container{
+        width: 170px;
+        
+    }
+    main{
+        padding: 30px;
+     }
 }
